# data

./: .gitignore
CleanUpDataFrame/: ReadMe.txt  cleanUp.ipynb
SimpleSQLWithDataFrame/: SqlComparision.ipynb
SpreadSheet2DB/: SpreadSheet2Database.ipynb  test_sqlite.db
SpreadSheet2DB/data/: testData.xlsx
WindowFunction/: READ_ME.txt  WindowFunction.ipynb  window_function.py  window_function_functions.ipynb  window_function_functions.py
WindowFunction/data/: db_test.db  test_data.xlsx
YoctoSizeReduction/: ImageSize.xlsx  convert2json.py  linux-yocto-tiny.config  linux-yocto-tiny.json  linux-yocto.config  linux-yocto.json  pkg_dependencies.py  task-depends-minimal-tiny.xlsx  task-depends-minimal.xlsx  task-depends-small-tiny.xlsx  task-depends-small.xlsx
renode/: CMakeLists.txt  Jenkinsfile  README.md  build-debug.bat  build-debug.sh  build-debug1.sh  build.bat  myprofile  renode-config.resc  renode-config_test.resc  test-profile  test-profile_t  uart.py
renode/conan/: conan_path.py  conanfile.py
renode/pkg/ctrace/: CMakeLists.txt  README.md  ctrace.c  ctrace.h
renode/src/: CMakeLists.txt  main.c  main.cpp
renode/test/: ReadUartViaPutty.py  renode-config_bvt.resc  test_renode.robot
